--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
     <article>
         <h2>Mon parcours</h2>
         <p>
-            Je m'appelle <strong>Safia Idriss Hassan</strong>, étudiant en MTIC II à l'ENASTIC.
+            Je m'appelle <strong>AICHA AHMAT ABOUBAKAR</strong>, étudiant en MTIC II à l'ENASTIC.
            Je suis Passionné de la technologies pour la creation numerique et l'innovation. Ce site web personnel a été réalisé pour présenter mon profit, mes competences et expériences en développement web.
            Actuellement étudiante à l'ENASTIC option Management des technologies de l'information et de la communication.
         </p>
@@ -52,4 +52,5 @@
 </footer>
 
 </body>
+
 </html>
