--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
         </form>
 
         <h3>Autres contacts</h3>
-        <p>Email : safiaidrisshassan532@email.com</p>
+        <p>Email : aichaahmataboubakar@email.com</p>
         <p>LinkedIn : linkedin.com/in/safia</p>
     </article>
 </section>
@@ -49,4 +49,5 @@
 </footer>
 
 </body>
+
 </html>
