--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
 
         <h3>Autres contacts</h3>
         <p>Email : aichaahmataboubakar@email.com</p>
-        <p>LinkedIn : linkedin.com/in/safia</p>
+        <p>LinkedIn : linkedin.com/in/Aicha</p>
     </article>
 </section>
 
@@ -51,3 +51,4 @@
 </body>
 
 </html>
+
