--- a/about.html
+++ b/about.html
@@ -48,9 +48,10 @@
 </section>
 
 <footer>
-    <p>© 2026 - Safia | MTIC II | ENASTIC</p>
+    <p>© 2026 - Aicha | MTIC II | ENASTIC</p>
 </footer>
 
 </body>
 
 </html>
+
